deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fastapi-app
  template:
    metadata:
      labels:
        app: fastapi-app
    spec:
      containers:
        - name: fastapi-app
          image: dhiraj918106/fastapi-app:latest
          ports:
            - containerPort: 8000
          resources:
            requests:   # Minimum resources required
              cpu: "100m"  # 100 millicores (0.1 CPU)
              memory: "128Mi"  # 128 MB RAM
            limits:  # Maximum resources allowed
              cpu: "500m"  # 500 millicores (0.5 CPU)
              memory: "512Mi"  # 512 MB RAM
