nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi-service
spec:
  selector:
    app: fastapi-app   # This should match the label of your FastAPI pods
  ports:
    - protocol: TCP
      port: 8000     # This is the port NGINX will route to
      targetPort: 8000  # The port your FastAPI app is running on
