service.yml
apiVersion: v1
kind: Service
metadata:
  name: fastapi-service
spec:
  selector:
    app: fastapi-app
  ports:
    - protocol: TCP
      port: 8000 # Exposed port
      targetPort: 8000  # Container port
  type: LoadBalancer  # Exposes the app
